Fixed non-smooth scrolling on mobile

--- a/src/style/global.styl
+++ b/src/style/global.styl
@@ -82,7 +82,8 @@ select, input, textarea
   overflow hidden
 
   &.flow
-    overflow auto
+    overflow-y scroll
+    -webkit-overflow-scrolling touch
 
   .inner
     padding 5.714rem 1.429rem 5rem
